fixed title overflow

--- a/styles.css
+++ b/styles.css
@@ -19,13 +19,12 @@ body {
 }
 
 .container {
-  max-width: 100rem;
+  max-width: 110rem;
   margin: 0 auto;
 }
 
 .grid--2--cols {
   grid-template-columns: repeat(2, 1fr);
-  column-gap: 3.2rem;
 }
 .grid--3--cols {
   grid-template-columns: repeat(3, 1fr);
@@ -57,7 +56,8 @@ body {
   font-size: 8rem;
   font-weight: 800;
   padding-bottom: 1.6rem;
-  width: 6.2rem;
+  text-overflow: ellipsis;
+  overflow: hidden;
 }
 
 /*NAV*/
@@ -106,7 +106,7 @@ body {
 
 .section-item {
   margin-bottom: 9.6rem;
-  padding: 4.8rem 3.2rem 4.8rem 4.8rem;
+  padding: 4.8rem 0rem 4.8rem 4.8rem;
   border-radius: 2px;
   box-shadow: 0px 1px 40px 0px rgba(202, 205, 207, 0.5);
 }
@@ -128,7 +128,7 @@ body {
 }
 
 .section-item-text-box {
-  max-width: 50rem;
+  max-width: 52rem;
 }
 
 .section-item-text {
@@ -144,9 +144,9 @@ body {
 
 */
 footer {
-  font-size: 12px;
+  font-size: 1.2rem;
   text-align: center;
-  padding: 45px;
+  padding-bottom: 3.2rem;
 }
 
 /*MEDIA QUERIES*/
